5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1582_1333.log
== SUBMITION (2019-03-29 13:05:58) 
-- CODE:
expressao = 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.137501
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:06:57) 
-- CODE:
expressao = 
print(30 – (3 ** 2 ) + (8 // ((3 ** 2) * 10)))
-- EXECUTION TIME:
0.138488
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:06:58) 
-- CODE:
expressao = 
print(30 – (3 ** 2 ) + (8 // ((3 ** 2) * 10)))
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:07:04) 
-- CODE:
expressao = 
print(30 – (3 ** 2 ) + (8 // ((3 ** 2) * 10)))
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:07:05) 
-- CODE:
expressao = 
print(30 – (3 ** 2 ) + (8 // ((3 ** 2) * 10)))
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:07:26) 
-- CODE:
expressao = 30 – (3 ** 2 ) + (8 // ((3 ** 2) * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2 ) + (8 // ((3 ** 2) * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:07:53) 
-- CODE:
expressao = (30 - (3 ** 2 )) + (8 // ((3 ** 2) * 10))
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:07:57) 
-- CODE:
expressao = (30 - (3 ** 2 )) + (8 // ((3 ** 2) * 10))
print(expressao)
-- EXECUTION TIME:
0.152562
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
